version/0.40/_sources/api/solver/_autosummary/settings/polyhedra.rst.txt
:orphan:

.. _polyhedra:

polyhedra
=========

.. autoclass:: ansys.fluent.core.generated.solver.settings_261.polyhedra
    :show-inheritance:

.. rubric:: Attributes

========================   ===================

Attribute                              Summary

========================   ===================
:ref:`options <options>`       Options object.

========================   ===================

.. rubric:: Methods

==============================================================   =======================================================================================================================

Method                                                                                                                                                                           Summary

==============================================================   =======================================================================================================================
:ref:`convert_domain <convert_domain>`                                                                                                         Convert entire domain to polyhedra cells.

:ref:`convert_hanging_nodes <convert_hanging_nodes>`                                                                            Convert cells with hanging nodes and faces to polyhedra.

:ref:`convert_hanging_node_zones <convert_hanging_node_zones>`                                                   Convert selected cell zones with hanging nodes and faces to polyhedra. 

:ref:`convert_skewed_cells <convert_skewed_cells>`                   Accesses options to convert highly skewed cells into polyhedral cells to improve mesh quality and solver stability.

==============================================================   =======================================================================================================================

.. rubric:: Included in:

==================   ==========================================================================================================

Parent                                                                                                                  Summary

==================   ==========================================================================================================
:ref:`mesh <mesh>`       Provides access to mesh operations such as generation, transformation, repair, import/export and more.

==================   ==========================================================================================================

